compile.err
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Note: project/supervisor/server/CNode.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
project/supervisor/storage/RStorageTest.java:10: error: method init in class RemoteStorage cannot be applied to given types;
        RemoteStorage.init();
                     ^
  required: boolean
  found: no arguments
  reason: actual and formal argument lists differ in length
Note: project/supervisor/storage/LocalStorage.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Note: project/supervisor/server/CNode.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Note: project/supervisor/storage/LocalStorage.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Note: project/supervisor/server/CNode.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Note: project/supervisor/storage/LocalStorage.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
Picked up _JAVA_OPTIONS: -XX:-UseSplitVerifier 
